# BachelorsProject

./: .gitignore  readme.txt
C++_proof_of_concept/: CMakeLists.txt  closed_3_body_adams_results(in).csv  pendulum_data.csv  plot_comparison.py  plot_pendulum.py
C++_proof_of_concept/include/: ABISolver.hpp  PendulumState.hpp  SOAConstraints.hpp  SpatialMath.hpp
C++_proof_of_concept/src/: main_closed.cpp  main_open.cpp
PythonEngine/: Examples.ipynb  requirements.txt  sprocket_belt.py
PythonEngine/Order_N_Validation/: order_n_val.py  order_n_val_closed.py
PythonEngine/StandAloneSimulations/: 3_closed_loop.py  4_body_closed_loop_singularities.py  multiple_constraints.py  n_pendulum.py  note.txt
PythonEngine/order_n_val_results/: plotting.py  plotting_no_RK45.py
PythonEngine/results/: constraint_violation_sprockets.csv  results_plotting.py
PythonEngine/utils/: objects.py  soa.py
